<resources>

    <string name="app_name">NetBank</string>
    <string name="real_app_name">Banken til folket</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="reset_pass">Reset password</string>
    <string name="repeat_pass">Repeat password</string>
    <string name="repeat_pass_error">Passwords are not identical</string>
    <string name="back">Back</string>
    <string name="reset_info">An email will be sent to you, in order to reset your password</string>
    <string name="title_activity_accounts">AccountsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="set_birthday">Set birthday date</string>
    <string name="update">Update</string>
    <string name="display_date">%1$d - %2$d - %3$d</string>
    <string name="account_display">
        %1$s \n \n
        Balance: %2$d
    </string>
    <string name="placeholder_balance_display">%1$d</string>
    <string name="placeholder_account_display">%1$s Account</string>
    <string name="placeholder_bill_display">
        Company: %1$s
        \nBill info: %2$s
        \n\nAmount: %3$d
    </string>
    <string name="transaction">Make transaction</string>
    <string name="transaction_amount">amount</string>
    <string name="finish_transaction">Make transaction</string>
    <string name="verification_text">
       Verification is required to transfer money to your own pension account
        or to another user \n
       Enter password to verify
    </string>
</resources>
